<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:text="@string/network"
      android:textColor="@color/primary"
      android:textSize="18sp" />

    <TextView
      android:id="@+id/state_v"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginStart="12dp"
      android:layout_gravity="center_vertical"
      android:textColor="@color/error"
      android:textSize="12sp"
      app:autoSizeTextType="uniform" />

    <ImageView
      android:id="@+id/map"
      android:layout_width="28dp"
      android:layout_height="28dp"
      android:layout_marginStart="8dp"
      android:layout_gravity="center_vertical"
      android:padding="2dp"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/map"
      android:src="@drawable/map" />

    <ImageView
      android:id="@+id/copy"
      android:layout_width="28dp"
      android:layout_height="28dp"
      android:layout_marginStart="8dp"
      android:layout_gravity="center_vertical"
      android:padding="2dp"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/copy"
      android:src="@drawable/copy" />

    <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/switch_v"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_gravity="center_vertical" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:orientation="horizontal">

    <TextView
      android:textStyle="bold"
      android:layout_width="72dp"
      android:layout_height="wrap_content"
      android:text="@string/latitude" />

    <TextView
      android:id="@+id/lat_v"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

    <TextView
      android:textStyle="bold"
      android:layout_width="72dp"
      android:layout_height="wrap_content"
      android:text="@string/longitude" />

    <TextView
      android:id="@+id/lng_v"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:orientation="horizontal">

    <TextView
      android:textStyle="bold"
      android:layout_width="72dp"
      android:layout_height="wrap_content"
      android:text="@string/accuracy" />

    <TextView
      android:id="@+id/acc_v"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

    <TextView
      android:textStyle="bold"
      android:layout_width="72dp"
      android:layout_height="wrap_content"
      android:text="@string/updated" />

    <TextView
      android:id="@+id/time_v"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  </LinearLayout>

</LinearLayout>
