<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="8dp"
  android:paddingBottom="8dp"
  android:paddingStart="4dp"
  android:paddingEnd="4dp"
  android:scrollbars="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/icon"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:src="@drawable/icon"
      tools:ignore="ContentDescription" />

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="2dp"
      android:layout_gravity="center_horizontal"
      android:text="@string/app_name"
      android:textSize="18sp" />

    <TextView
      android:id="@+id/version"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:layout_marginBottom="8dp"
      android:layout_gravity="center_horizontal" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/accentTrans" />


    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/accentTrans" />

    <LinearLayout
      android:id="@+id/source_code"
      style="@style/AboutActivityItemContainer">

      <ImageView
        style="@style/AboutActivityIconImg"
        android:src="@drawable/github_mark"
        tools:ignore="ContentDescription" />

      <LinearLayout style="@style/AboutActivityItemTextBox">

        <TextView
          style="@style/AboutActivityItemTitle"
          android:text="@string/source" />

        <TextView
          style="@style/AboutActivityItemSummary"
          android:text="@string/source_url" />

      </LinearLayout>
    </LinearLayout>

  </LinearLayout>
</androidx.core.widget.NestedScrollView>
