<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingTop="16dp"
  android:paddingBottom="16dp"
  android:paddingStart="4dp"
  android:paddingEnd="4dp"
  android:scrollbars="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_gravity="center_horizontal">

      <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bitcoin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:background="@drawable/round_button_bg"
        android:scaleType="center"
        android:src="@drawable/bitcoin" />

      <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/bank_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="18dp"
        android:background="@drawable/round_button_bg"
        android:scaleType="center"
        android:src="@drawable/dollar" />

      <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/play_store_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="18dp"
        android:background="@drawable/round_button_bg"
        android:scaleType="center"
        android:src="@drawable/play_store" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/bitcoin_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:visibility="gone">

      <Button
        android:id="@+id/bitcoin_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_bitcoin" />

      <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/bitcoin_qr_code"
        tools:ignore="ContentDescription" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:background="@drawable/rectangular_border"
        android:text="@string/bitcoin_address"
        android:textIsSelectable="true" />

    </LinearLayout>

    <Button
      android:id="@+id/bank_account_link"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ask_for_bank_account"
      android:visibility="gone" />

    <Button
      android:id="@+id/play_store_link"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/get_paid_version"
      android:visibility="gone" />

  </LinearLayout>
</androidx.core.widget.NestedScrollView>
