<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/state_v"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center_vertical"
      android:textColor="@color/error"
      android:textSize="14sp"
      app:autoSizeTextType="uniform" />

    <ImageView
      android:id="@+id/map"
      android:layout_width="28dp"
      android:layout_height="28dp"
      android:layout_marginStart="4dp"
      android:layout_gravity="center_vertical"
      android:padding="2dp"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/map"
      android:src="@drawable/map" />

    <ImageView
      android:id="@+id/copy"
      android:layout_width="28dp"
      android:layout_height="28dp"
      android:layout_marginStart="4dp"
      android:layout_gravity="center_vertical"
      android:padding="2dp"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/copy"
      android:src="@drawable/copy" />
    <ImageView
        android:id="@+id/share"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:layout_gravity="center_vertical"
        android:padding="2dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/share"
        android:src="@drawable/share" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="5dp"
        android:src="@drawable/ic_latitude" />

    <TextView
        android:id="@+id/lat_v"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="24dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="5dp"
        android:src="@drawable/ic_longitude" />

    <TextView
        android:id="@+id/lng_v"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="24dp"
        android:layout_weight="1" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:orientation="horizontal">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="5dp"
        android:src="@drawable/ic_baseline_speed_24" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="24dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="5dp"
        android:src="@drawable/ic_baseline_landscape_24"/>

    <TextView
        android:id="@+id/altitude_MSL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="24dp"
        android:layout_weight="1" />


  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="5dp"
        android:src="@drawable/ic_accuracy" />

    <TextView
        android:id="@+id/acc_v"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="24dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="5dp"
        android:src="@drawable/ic_baseline_access_time_24" />

    <TextView
        android:id="@+id/time_v"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="24dp"
        android:layout_weight="1" />

  </LinearLayout>

<Space
    android:layout_width="match_parent"
    android:layout_height="10dp"/>
  
  <com.redinput.compassview.CompassView
      android:id="@+id/compass"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:backgroundColor="@color/dynamicBg"
      app:showMarker="false"
      app:markerColor="@color/primary"
      app:lineColor="@color/dynamicFgDim"
      app:textColor="@color/dynamicText"
      app:textSize="15sp"
      app:degrees="0"
      app:rangeDegrees="180.0" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:orientation="horizontal"
    tools:ignore="UseCompoundDrawables">

    <TextView
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center_vertical"
      android:text="@string/satellites"
      android:textAllCaps="true" />

    <ImageView
      android:id="@+id/sat_detail"
      android:layout_width="28dp"
      android:layout_height="28dp"
      android:layout_marginStart="4dp"
      android:layout_gravity="center_vertical"
      android:padding="2dp"
      android:background="?android:attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/satellites"
      android:src="@drawable/satellite" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:orientation="horizontal">

    <TextView
        android:textStyle="bold"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/total" />

    <TextView
        android:id="@+id/total_sat_v"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
      android:textStyle="bold"
      android:layout_width="48dp"
      android:layout_height="wrap_content"
      android:text="@string/good" />

    <TextView
      android:id="@+id/good_sat_v"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

    <TextView
      android:textStyle="bold"
      android:layout_width="48dp"
      android:layout_height="wrap_content"
      android:text="@string/fixed" />

    <TextView
      android:id="@+id/used_sat_v"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  </LinearLayout>

</LinearLayout>
